Add tracking script

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,18 @@
   <link rel="publisher" href="https://plus.google.com/u/1/b/102039490248800789795/+taxfoundation">
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Roboto+Mono" rel="stylesheet">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120823945-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-120823945-1');
+  </script>
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
