Console message when in iframe

--- a/public/index.html
+++ b/public/index.html
@@ -67,6 +67,13 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+  <script>
+    if (parent !== window) {
+      console.info(
+        "Super excited you're sharing the Tax Foundation's interactive map! We worked really hard to put this together, and we hope people will get value from it and visit our site to see more of our work! Check our our research at https://taxfoundation.org"
+      );
+    }
+  </script>
 </body>
 
 </html>
